feat: 实现消息转发系统和清理向后兼容代码
主要功能：
- 新增消息类型枚举（HEARTBEAT、SERVICE_MESSAGE、CLIENT_MESSAGE、BROADCAST_MESSAGE）
- 实现服务消息转发器，支持同步/异步转发
- 添加负载均衡策略配置（轮询和权重策略）
- 支持指定实例ID的精确转发
- 添加gRPC连接池优化

技术改进：
- 更新到现代gRPC API，移除废弃的WithInsecure()
- 清理废弃的向后兼容函数
- 统一连接处理接口
- 添加详细的转发日志和错误处理

新增文件：
- gatesvr/internal/forwarder/forwarder.go - 消息转发器实现
- MESSAGE_FORWARDING_GUIDE.md - 使用指南
- gatesvr/internal/nacos/LOAD_BALANCE_README.md - 负载均衡文档

配置更新：
- config.yaml 添加服务转发配置
- proto/common.proto 扩展消息结构

--- a/config.yaml
+++ b/config.yaml
@@ -19,3 +19,30 @@ kafka:
 
 enable_ip_whitelist: true
 enable_token_check: true
+
+# 服务转发配置
+service_forwarding:
+  # 默认负载均衡策略: round_robin 或 weighted
+  default_load_balance: "weighted"
+  # 请求超时时间（毫秒）
+  request_timeout_ms: 5000
+  # 异步请求超时时间（毫秒）
+  async_timeout_ms: 1000
+  # 服务特定配置
+  services:
+    userservice:
+      group: "DEFAULT_GROUP"
+      load_balance: "weighted"
+      timeout_ms: 3000
+    gameservice:
+      group: "DEFAULT_GROUP" 
+      load_balance: "round_robin"
+      timeout_ms: 5000
+    payservice:
+      group: "prod"
+      load_balance: "weighted"
+      timeout_ms: 8000
+    chatservice:
+      group: "DEFAULT_GROUP"
+      load_balance: "round_robin"
+      timeout_ms: 2000
