feat: 添加完整的玩家消息鉴权系统
- JWT Token认证机制
  * 基于HMAC-SHA256的JWT Token生成和验证
  * 支持玩家信息、权限、平台等丰富载荷
  * Token缓存机制提升验证性能
  * 自动过期清理和刷新机制

- 多层次鉴权策略
  * 连接建立时认证（可选）
  * 消息处理时认证（按类型配置）
  * 基于服务的权限控制
  * 服务白名单机制

- 权限管理系统
  * 基于等级和VIP的默认权限策略
  * 支持service:*、service:name等权限格式
  * 管理员、普通用户、访客等角色支持
  * 细粒度权限控制

- Token管理工具
  * 快速生成测试Token
  * 批量Token生成和验证
  * Token信息展示和调试
  * 管理员Token和访客Token生成

- 认证配置系统
  * 完整的YAML配置支持
  * 可配置认证开关、密钥、过期时间
  * 可配置需认证的消息类型
  * 可配置服务白名单和自动刷新

- 集成到连接处理
  * 首次连接Token验证
  * 每条消息的权限检查
  * 认证失败的错误响应
  * Token刷新提示机制

- 详细使用文档
  * Token生成和验证示例
  * 客户端集成指南
  * 权限配置说明
  * 故障排除和最佳实践

错误码: 1001-1007，支持连接认证和消息认证
缓存命中率监控，Token自动清理，权限检查优化

--- a/config.yaml
+++ b/config.yaml
@@ -46,3 +46,44 @@ service_forwarding:
       group: "DEFAULT_GROUP"
       load_balance: "round_robin"
       timeout_ms: 2000
+
+# 限流配置
+rate_limit:
+  # 是否启用限流保护
+  enabled: true
+  # 全局限流配置（整个网关）
+  global_rate: 500        # 全局每秒最大请求数
+  global_capacity: 1000   # 全局令牌桶容量
+  # 服务级限流配置（单个服务）
+  service_rate: 100       # 单服务每秒最大请求数
+  service_capacity: 200   # 单服务令牌桶容量
+  # 玩家级限流配置（防止单玩家恶意请求）
+  player_rate: 10         # 单玩家每秒最大请求数
+  player_capacity: 20     # 单玩家令牌桶容量
+  # 清理配置
+  cleanup_interval_min: 1 # 令牌桶清理间隔（分钟）
+  bucket_idle_time_min: 5 # 令牌桶空闲超时时间（分钟）
+
+# 认证配置
+auth:
+  # 是否启用认证
+  enabled: true
+  # JWT密钥（生产环境请使用强密钥）
+  secret_key: "mua-gatesvr-jwt-secret-key-2024-production"
+  # Token过期时间（小时）
+  token_expire_hours: 24
+  # Token清理间隔（分钟）
+  cleanup_interval_min: 10
+  # 需要认证的消息类型
+  require_auth:
+    - "SERVICE_MESSAGE"  # 服务消息需要认证
+  # 免认证的服务白名单
+  whitelist_services:
+    - "health"      # 健康检查服务
+    - "version"     # 版本查询服务
+  # 单玩家最大Token数量
+  max_tokens_per_player: 3
+  # 是否启用自动刷新Token
+  enable_auto_refresh: true
+  # 自动刷新阈值（分钟，当Token剩余有效期小于此值时自动刷新）
+  refresh_threshold_min: 60
